# cuda_ops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: on_pr.yml
.github/workflows/: build_and_push_image.yml  create_release.yml  nightly_build.yml  on_pr.yml  on_push_main.yml  push_python_package.yml
.github/workflows/actions/compute_semantic_verison/: action.yml
.github/workflows/compute_semantic_version/: action.yml  postprocess_version.py
cuda_ops/: __init__.py  rms_norm_execute.py  setup.py
cuda_ops/cuda_ops/: __init__.py
cuda_ops/src/: Makefile  rms_norm.cu
cuda_ops/test/: test.py
src/: rms_norm.cu
test/: test.py
